radarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radarr
  namespace: filme
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: radarr
  template:
    metadata:
      labels:
        k8s-app: radarr
    spec:
      containers:
        - name: radarr
          image: linuxserver/radarr:latest
          ports:
            - containerPort: 7878
          volumeMounts:
            - mountPath: /config 
              name: config
            - mountPath: /movies
              name: movies
            - mountPath: /downloads 
              name: downloads
          resources:
            limits:
              memory: "1000Mi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "1000m"
      volumes:
        - name: downloads
          hostPath:
            path: /media/hddext4/K8s/qbittorrent/
        - name: movies
          hostPath:
            path: /media/hddext4/jellyfin/media/Filme
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
        kubernetes.io/hostname: tedy-desktop-debian
